@@ -1,5 +1,5 @@
 jagsModel <-
-function(file, data=sys.frame(sys.parent()), 
+function(name, file, data=sys.frame(sys.parent()), 
 inits, n.chains = 1, n.adapt=1000, quiet=FALSE) 
 {
     if (is.function(file) || inherits(file, "custommodel")) {
@@ -8,10 +8,10 @@ inits, n.chains = 1, n.adapt=1000, quiet=FALSE)
         file <- write.jags.model(file)
         on.exit(try(clean.jags.model(file)))
     }
+    n.clones <- dclone:::nclones.list(as.list(data))
     res <- jags.model(file=file, data=data, 
-        inits=inits, n.chains=n.chains,
-        n.adapt=n.adapt, quiet=quiet)
-    n.clones <- dclone:::nclones.list(data)
+            inits=inits, n.chains=n.chains,
+            n.adapt=n.adapt, quiet=quiet)
     if (!is.null(n.clones) && n.clones > 1) {
         attr(res, "n.clones") <- n.clones
     }
