@@ -2,7 +2,15 @@ dclone package version history
 
 Version 1.3-6, September 7, 2011
     * jags.fit return jags model with n.clones
-      attribute.
+      attribute when n.iter=0.
+    * parJagsModel and parCodaSamples: passes the
+      n.clones info from data argument.
+    * jagsModel and codaSamples added as wrapper
+      around jags.model and coda.samples functions of
+      rjags package to track dclone information passed
+      through data argument and allow custommodel
+      specification of model argument (similarly to par* 
+      versions of similar functions).
 
 Version 1.3-5, August 23, 2011
     * n.update=1000 is now the default instead of 0
